<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a1523066.pdumaresq_b51_a03.About"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/about_layout_margin" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/diff_title_size"
            android:layout_marginTop="@dimen/about_margin_top"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/about_margin"
            android:text="@string/about_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/about_margin"
            android:textSize="@dimen/about_font_size"
            android:text="@string/about_author" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/about_margin"
            android:textSize="@dimen/about_font_size"
            android:text="@string/about_date_completed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/about_margin"
            android:textSize="@dimen/about_font_size"
            android:text="@string/about_course" />
    </LinearLayout>
</ScrollView>
