<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a1523066.pdumaresq_b51_a03.Options"
    tools:showIn="@layout/activity_options"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/opts_layout_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtMinLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opts_text_size"
            android:text="@string/opts_min" />
        <SeekBar
            android:id="@+id/sbkMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/opts_layout_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMaxLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opts_text_size"
            android:text="@string/opts_max" />
        <SeekBar
            android:id="@+id/sbkMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15" />
    </LinearLayout>

    <Button
        android:layout_margin="@dimen/opts_layout_margin"
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/opts_text_size"
        android:text="@string/opts_save"/>
</LinearLayout>
