<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/gameWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a1523066.pdumaresq_b51_a03.PlayGame"
    tools:showIn="@layout/activity_play_game"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/game_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgHangman"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/game_image_height"
                    app:srcCompat="@drawable/wrong_0" />

                <TextView
                    android:id="@+id/txtGuessSpaces"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/game_button_size"
                    android:layout_weight="1"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight=".7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_weight=".85"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_wrong"/>

                <TextView
                    android:id="@+id/txtLettersGuessed"
                    android:layout_weight=".15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginStart="@dimen/game_word_margin"
                android:layout_marginEnd="@dimen/game_word_margin"
                android:text="" />

            <Button
                android:id="@+id/btnMakeGuess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/game_guess"/>

            <Button
                android:id="@+id/btnResetGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/game_reset"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
